crates/escalier_parser/src/snapshots/escalier_parser__tests__tuples.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"let x = [];\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 11,
                    },
                },
                span: 0..11,
                pattern: Pattern {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 4,
                        },
                        end: Position {
                            line: 0,
                            column: 5,
                        },
                    },
                    span: 4..5,
                    kind: Ident(
                        BindingIdent {
                            name: "x",
                            mutable: false,
                            span: 4..5,
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 5,
                                },
                            },
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 8,
                            },
                            end: Position {
                                line: 0,
                                column: 10,
                            },
                        },
                        span: 8..10,
                        kind: Tuple(
                            Tuple {
                                elems: [],
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
